[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://addons/popochiu-addons/letterbox/letterbox_controller.gd" id="1"]

[node name="Letterbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
mouse_filter = 2
visible = false
script = ExtResource("1")

[node name="TopBar" type="ColorRect" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 0.0
size_flags_horizontal = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="BottomBar" type="ColorRect" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="LeftBar" type="ColorRect" parent="."]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 1.0
size_flags_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="RightBar" type="ColorRect" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
